--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -36,3 +36,13 @@
         }
     }
 }
+
+@media (max-width: 800px) {
+    #header {
+        left: -250px;
+    }
+
+    #main {
+        padding-left: 0;
+    }
+}
