--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -127,6 +127,13 @@
 
             }
         }
+
+        li.active {
+            a {
+                background-color: rgb(37, 89, 185);
+                border-radius: 10px;
+            }
+        }
     }
 }
 
