--- a/src/assets/scss/section/_today.scss
+++ b/src/assets/scss/section/_today.scss
@@ -13,6 +13,8 @@
 
         img {
             height: 100%;
+            object-fit: cover;
+            object-position: center;
         }
     }
 
