--- a/src/assets/scss/section/channel.scss
+++ b/src/assets/scss/section/channel.scss
@@ -85,5 +85,23 @@
         }
     }
 
-    .channel__more {}
+    .channel__more {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        button {
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: var(--white);
+            background-color: var(--primary-color400);
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        :hover {
+            background-color: var(--primary-color);
+        }
+    }
 }
