--- a/src/assets/scss/section/_today.scss
+++ b/src/assets/scss/section/_today.scss
@@ -10,11 +10,17 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid var(--primary-color100);
+        overflow: hidden;
 
         img {
-            height: 100%;
+            width: 100%;
             object-fit: cover;
             object-position: center;
+            margin: 0 auto;
         }
     }
 
