--- a/src/assets/scss/section/_video.scss
+++ b/src/assets/scss/section/_video.scss
@@ -306,6 +306,48 @@
                     margin-bottom: 1.2rem;
                 }
             }
+
+            .video__comment {
+                .comment__title {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    button {
+                        padding: 5px 10px;
+                        color: var(--primary-color300);
+                        background-color: var(--white);
+                        border: 1px solid var(--primary-color300);
+                        border-radius: 15px;
+                        cursor: pointer;
+                    }
+
+                    button:hover {
+                        background-color: var(--primary-color300);
+                        color: var(--white);
+                    }
+                }
+
+                .comment__all {
+                    margin-top: 3px;
+                    display: flex;
+                    flex-direction: column;
+                    // border-bottom: 1px solid var(--primary-color600);
+                    font-size: 0.8rem;
+                    padding: 2px 5px;
+
+                    .comment__nickname {
+                        font-weight: bold;
+                        border-bottom: 1px dashed var(--primary-color600);
+                        padding: 2px 0;
+                    }
+
+                    .comment__cont {
+                        padding: 2px 0;
+                    }
+                }
+            }
+
         }
     }
 }
@@ -352,4 +394,52 @@
     #videoPage {
         margin-top: 92px;
     }
+}
+
+.video__slider {
+
+    .video {
+        margin-bottom: 30px;
+        padding: 3px;
+        border: 1px solid var(--primary-color600);
+        height: 200px;
+
+        .video__thumb {
+            margin: 0 auto;
+            width: 95%;
+
+            a {
+                margin-top: 2.2%;
+                display: block;
+                cursor: pointer;
+                width: 100%;
+                padding-bottom: 56.25%;
+                background-size: cover;
+                background-position: center;
+                margin-bottom: 10px;
+            }
+        }
+
+        .video__info {
+            border-top: 1px dashed var(--primary-color600);
+            width: 95%;
+            margin: 0 auto;
+
+            .title {
+                margin-top: 10px;
+
+                a {
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                    @include line(1);
+                }
+            }
+
+            .desc {
+                @include line(1);
+            }
+
+        }
+    }
+
 }
